[tool.poetry]
name = "create-react-folders"
version = "0.1.0"
description = ""
authors = ["pavelborisofff <pavel.borisofff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

